styles/2_style.css
* {
  box-sizing: border-box;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
}
html, body {
  width: 100%; min-height: 100%;
  font: 16px Lora, Georgia, Times, serif;
  -webkit-transition: ease-in-out background-color .3s;
  -moz-transition: ease-in-out background-color .3s;
}
body {
  margin: 0;
  padding: 0;
  background: #fff;
}

p, ol, ul {
  line-height: 1.5em;
  margin: 1.5em 0;
}
p:first-child { margin-top: 0;}
p:last-child { margin-bottom: 0;}

ul {
  list-style-type: square;
}
span {
  -webkit-transition: all .3s ease-out;
  -moz-transition: all .3s ease-out;
}

img {
  vertical-align: middle;
}

iframe {
  border: none;
}

address { font-style: normal; }

button {
  color: #000;
  text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
  margin: 2px 0px;
  padding: 4px 1em;
  border-radius: 4px;
  border: 1px solid #ccc;
  background-image: linear-gradient(to bottom, #ffffff, #e6e6e6);
}
button:hover, button[disabled] {
  background-image: linear-gradient(to bottom, #f0f0f0, #e6e6e6);
}
button:active, button:focus {
  background-image: linear-gradient(to bottom, #e0e0e0, #d6d6d6);
}
button[disabled] {
  cursor: default;
  color: #999;
}

textarea {
  resize: vertical;
  margin: 2px 0px;
  padding: 0.5em;
  border-radius: 4px;
  border: 1px solid #ccc;
  box-shadow: inset 0 1px 2px rgba(0,0,0,.1)
}

a { color: #1D78B4; text-decoration: none; }
a:hover { color: #1D78B4; text-decoration: underline; }




#page {
  box-shadow: -2px 0 20px rgba(0,0,0,.2);
  background: white;
  -webkit-transition: ease-in-out .2s;
  -moz-transition: ease-in-out .2s;
  transition: ease-in-out .2s;
}
.container {
  width: 940px;
  margin: 0 auto;
}

#not-found {
  text-align: center;
  background: #d33;
  color: white;
  border: solid 20px white;
  box-shadow: 0 0 4px rgba(0,0,0,.4);
  margin: 40px 0; padding: 80px;
  font-family: Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
  text-transform: uppercase;
  -webkit-animation: .3s flash infinite ease-in-out alternate;
}
@-webkit-keyframes flash {
  from { -webkit-filter: invert(100%);}
  to { }
}
#not-found h1 {
  font-size: 72px;
  margin: 0;
}
#not-found img {
  width: 100%;
}
#not-found p {
  font-size: 24px;
}
#not-found a {
  border: solid 1px white;
  border-radius: 25px;
  padding: 5px 15px;
  color: white;
}

.clear {
  clear: both;
}
.hidden {
  display: none !important;
  visibility: hidden;
}
.nowrap {
  white-space: nowrap;
}

.external {
  background: url(http://static.q42.nl/images/external_link_icon.png) no-repeat center right;
  padding-right: 18px;
}

.readmore {
  padding: 0px 0px 2px 5px;
  transition: all .2s ease-out;
  display: inline-block;
  height: 21px;
  -webkit-transition: all .2s ease-out;
  -moz-transition: all .2s ease-out;
}
.readmore:hover {
  background-color: #1D78B4;
  color: white;
  text-decoration: none;
  transition: all .2s ease-out;
  -webkit-transition: all .2s ease-out;
  -moz-transition: all .2s ease-out;
}
.readmore:before { content: "";}
.readmore:after {
  content: " »";
  background-color: #1D78B4;
  color: white;
  margin-left: 6px;
  padding: 0px 4px 0px 5px;
  font-size: 23px;
  height: 21px;
  display: inline-block;
  line-height: 17px;
}



/* block-text */
.block-text {
  border-top: solid transparent 20px;
  padding-bottom: 20px;
  border-bottom: solid #ccc 1px;
}

.block-text h1,
.blog h1 {
  font: normal 2.84em Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
  letter-spacing: -1px;
  margin: 20px 0;
}

.block-text h1 b {
  color: #232323;
  font-weight: normal;
}

.block-full {
  position: relative;
  border-bottom: solid #ccc 1px;
  padding: 40px 0;
  clear: both;
}

.intro-outro {
  text-align: center;
  padding: 120px 0;
}
.intro-outro p {
  font-size: 1.3em;
  margin: 1em;
}
.intro-outro h1 {
  font-family: Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-size: 3em;
  text-align: center;
  margin: 0;
}
.intro-outro h1 + p {
  color: #555;
}

.block-large {
  border-bottom: solid #ccc 1px;
  padding: 80px 0;
  clear: both;
}
.block-large:after {
  content: ".";
  display: block;
  clear: both;
  visibility: hidden;
  line-height: 0;
  height: 0;
}
.container > .block-large:last-child {
  border: none;

}

.block-large.block-no-padding-after {
  padding-bottom: 0;
  border-bottom: none;
}
.block-large.block-no-padding-after + .block-large { padding-top: 40px; }

section h1,
.block-large h1 {
  text-align: left;
}
section h2,
.block-large > .body h2
{
  font: normal 40px Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
  margin: 0 0 20px 0;
  letter-spacing: -1px;
  color: #232323;
}
.block-large > .body h3 {
  font: 14px/1.5 Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
  padding: 0px;
  margin-top: -18px;
  color: #888;
}
.block-large > .body p:last-child { margin-bottom: 1.5em; }

.block-large .visual {
  position: relative;
  width: 620px;
  margin: 0 20px 0 0;
  float: left;
}

.block-large.right .visual {
  margin: 0 0 0 20px;
  float: right;
}

.block-large .body {
  width: 300px;
  float: right;
}
.block-large.right .body {
  float: left;
}

.block-large .intro {
  width: 600px;
  margin: 0 20px 0 0;
  float: left;
}
.block-large .intro h3 { font-weight: normal; }
.block-large .intro .visual { margin-bottom: 15px; }

.block-readmore {
  clear: both;
  text-align: right;
}

/* block-small */
.block-small {
  width: 300px;
  float: left;
  white-space: normal;
  overflow: hidden;
}
.block-small .body {
  float: none;
  overflow: hidden;
}
.block-small h2 {
  font: normal 25px Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
  margin: 20px 0 0 0;
  letter-spacing: -1px;
}
.block-small h3 {
  font: 14px/1.5 Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
  padding: 0px;
  margin-top: 3px;
  color: #888;
}
.block-small .visual {
  float: none;
  position: relative;
  width: 300px;
  overflow: hidden;
}
.block-small .visual img {
  width: 300px; height: 160px;
}

.block-small:nth-of-type(1),
.block-small:nth-of-type(2) {
  margin-right: 20px;
}

.subcontent {
  padding: 20px;
  color: #888;
}

.subcontent h2:first-child {
  margin: 0px;
}

#loading {
  text-align: center;
  padding: 100px 0;
  position: fixed;
  top: 254px; left: 0; right: 0; bottom: 0;
  z-index: 99999;
  background: #fff;
}

#nprogress .bar { background-color: #c00; }
#nprogress .spinner { display: none; }



/* VISUAL */
.visual img {
  width: 100%;
}
a.caption,
.visual.caption, .visual.caption p, .visual.caption img
{ text-decoration: none; }

.visual.caption {
  display: block;
  overflow: hidden;
}
.visual.caption:hover img, .visual.caption:hover video {
  -webkit-transform: translateY(-15px);
  -moz-transform: translateY(-15px);
  -o-transform: translateY(-15px);
  transform: translateY(-15px);
}
.visual.caption p {
  position: absolute;
  z-index: 999;
  margin: 0;
  padding: 4px 12px;
  width: 100%;
  background-color: #232323;
  color: #FFF;
  font-size: 80%;
  text-decoration: none;
}
.visual.caption:hover p {
  -webkit-transform: translateY(-25px);
  -moz-transform: translateY(-25px);
  -o-transform: translateY(-25px);
  transform: translateY(-25px);
}
.visual.caption, .visual.caption p, .visual.caption img, .visual.caption video {
  -webkit-transition: all .2s ease-out;
  -moz-transition: all .2s ease-out;
  -o-transition: all .2s ease-out;
  transition: all .2s ease-out;
}

/* Icon boxes */
.block-with-icons ul {
  margin-bottom: 0px;
}

.block-with-icons ul li:last-child {
  padding-bottom: 0px;
}

.block-with-icons h2 {
  margin-top: 0px;
}

.block-with-icons .iconList {
  padding: 0;
}

.iconList li {
  overflow: hidden;
  padding: 5px 0 19px 0px;
  list-style-type: none;
}

.iconList li img { float: left; }
.iconList li i {
  vertical-align: middle;
  display: block;
  float: left;
  min-width: 40px;
  text-align: center;
}
.iconList li div { display: inline-block; padding: 4px 0px 0px 9px; }

.iconList.no-text li {
  display: inline-block;
}
.iconList.no-text li div {
  display: none;
  padding: 0;
}
.iconList.no-text a {
  color: inherit !important;
}
.iconList.no-text a:hover {
  color: #88c546 !important;
  text-decoration: none !important;
}

